[project]
name = "mcp-claude-history"
version = "0.1.0"
description = "MCP server for searching Claude Code conversation history using D-Heap algorithm"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-claude-history = "server:mcp.run"
